# mad-libs

./: README.md  calendar-facts.cabal  mad-libs.cabal  stack.yaml  xkcd.flow
src/: Main.hs
