name:                mad-libs
version:             0.1.0.0
-- synopsis:
-- description:
build-type:          Simple
cabal-version:       >=1.10

executable mad-libs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.0 && <= 1.1,
                       MonadRandom >= 0.5.0 && <= 0.5.1,
                       parsec >= 3.1.0 && <= 3.1.11
